Time: 0 ms (100%), Space: 99.2 MB (5.17%) - LeetHub